--- a/app/src/main/res/layout/vacuum_view.xml
+++ b/app/src/main/res/layout/vacuum_view.xml
@@ -108,7 +108,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"><!--android:visibility="gone"-->
 
                     <com.google.android.material.button.MaterialButtonToggleGroup
-                        android:id="@+id/onStateGroup"
+                        android:id="@+id/vacuum_onstate_group"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -139,12 +139,12 @@
                     </com.google.android.material.button.MaterialButtonToggleGroup>
 
                     <com.google.android.material.button.MaterialButtonToggleGroup
-                        android:id="@+id/modeGroup"
+                        android:id="@+id/vacuum_mode_group"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/onStateGroup"
+                        app:layout_constraintTop_toBottomOf="@+id/vacuum_onstate_group"
                         app:singleSelection="true">
 
                         <com.google.android.material.button.MaterialButton
@@ -166,7 +166,7 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@+id/modeGroup">
+                        app:layout_constraintTop_toBottomOf="@+id/vacuum_mode_group">
 
                         <TextView
                             android:id="@+id/location"
