--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Favoritos">
+    tools:context=".fragments.FavoritesFragment">
 
      TODO: Update blank fragment layout
     <androidx.recyclerview.widget.RecyclerView
