4 vistas sin warnings

--- a/app/src/main/res/layout/ac_view.xml
+++ b/app/src/main/res/layout/ac_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -41,7 +41,8 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@mipmap/ac_round" />
+                        app:srcCompat="@mipmap/ac_round"
+                        android:contentDescription="@string/ac" />
 
 
                     <TextView
@@ -49,7 +50,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Casa | Living"
+
                         android:textSize="18sp"
                         app:layout_constraintStart_toEndOf="@+id/imageView"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -72,7 +73,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginBottom="8dp"
-                        android:text="Prendido - 23°C"
+
                         android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView" />
@@ -82,7 +83,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:background="@drawable/ripple_effect"
-                        android:contentDescription="Extend arrow"
+                        android:contentDescription="@string/extend_arrow"
                         android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                         android:tint="@color/colorPrimary"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -115,14 +116,15 @@
                         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                         app:layout_constraintStart_toEndOf="@+id/ac_switch"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_minus" />
+                        app:srcCompat="@drawable/ic_minus"
+                        android:contentDescription="@string/minus_button" />
 
                     <TextView
                         android:id="@+id/ac_temp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="23°C"
+
                         android:textSize="20sp"
                         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                         app:layout_constraintStart_toEndOf="@+id/ac_minus"
@@ -137,7 +139,8 @@
                         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                         app:layout_constraintStart_toEndOf="@+id/ac_temp"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_plus" />
+                        app:srcCompat="@drawable/ic_plus"
+                        android:contentDescription="@string/plus_button" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/constraintLayout"
@@ -150,7 +153,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Modo:"
+                            android:text="@string/modo"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -172,21 +175,21 @@
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Frío" />
+                                android:text="@string/frio" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/heat_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Calor" />
+                                android:text="@string/calor" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/ventilation_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Ventilacion" />
+                                android:text="@string/ventilacion" />
 
                         </com.google.android.material.button.MaterialButtonToggleGroup>
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -201,7 +204,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Desplazamiento de aspas"
+                            android:text="@string/desplazamiento_aspas"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -214,7 +217,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="5dp"
-                            android:text="Vertical:"
+                            android:text="@string/vertical"
                             android:textSize="18sp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/oven_state" />
@@ -234,35 +237,35 @@
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Auto" />
+                                android:text="@string/auto" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/v_22_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:text="22" />
+                                android:text="@string/veintidos" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/v_45_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:text="45" />
+                                android:text="@string/cuarentaycinco" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/v_67_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:text="67" />
+                                android:text="@string/sesentaysiete" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/v_90_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:text="90" />
+                                android:text="@string/noventa" />
 
                         </com.google.android.material.button.MaterialButtonToggleGroup>
 
@@ -272,7 +275,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="5dp"
-                            android:text="Horizontal:"
+                            android:text="@string/horizontal"
                             android:textSize="18sp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/vertical_toggle_group" />
@@ -292,42 +295,42 @@
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Auto" />
+                                android:text="@string/auto" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/h_n90_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:text="-90" />
+                                android:text="@string/menosNoventa" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/h_n45_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:text="-45" />
+                                android:text="@string/menoscuarentaycinco" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/h_0_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:text="0" />
+                                android:text="@string/cero" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/h_45_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:text="45" />
+                                android:text="@string/cuarentaycinco" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/h_90_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:text="90" />
+                                android:text="@string/noventa" />
 
                         </com.google.android.material.button.MaterialButtonToggleGroup>
 
@@ -336,7 +339,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Velocidad Ventilador"
+                            android:text="@string/velocidad_ventilador"
                             android:textSize="18sp"
                             android:textStyle="bold"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -358,35 +361,35 @@
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Auto" />
+                                android:text="@string/auto" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/fs_25_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:text="25" />
+                                android:text="@string/veinticinco" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/fs_50_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:text="50" />
+                                android:text="@string/cincuenta" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/fs_75_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:text="75" />
+                                android:text="@string/setentaycinco" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/fs_100_button"
                                 style="?attr/materialButtonOutlinedStyle"
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:text="100" />
+                                android:text="@string/cien" />
 
                         </com.google.android.material.button.MaterialButtonToggleGroup>
 
