--- a/app/src/main/res/layout/oven_view.xml
+++ b/app/src/main/res/layout/oven_view.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -34,7 +33,7 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_marginStart="16dp"
-                        android:contentDescription="oven icon"
+                        android:contentDescription="@string/oven"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -45,7 +44,6 @@
                         android:id="@+id/oven_location"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Casa | Living"
                         android:layout_marginStart="10dp"
                         android:textSize="18sp"
                         app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -56,7 +54,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
-                        android:text="Horno"
                         android:textColor="@color/colorText"
                         android:textSize="22sp"
                         app:layout_constraintBottom_toTopOf="@+id/oven_state"
@@ -67,7 +64,6 @@
                         android:id="@+id/oven_state"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Prendido - 180°C"
                         android:layout_marginStart="10dp"
                         android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -82,7 +78,8 @@
                         android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                         android:tint="@color/colorPrimary"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:contentDescription="@string/extend_arrow" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -111,7 +108,7 @@
                         android:background="@drawable/ripple_effect"
                         app:layout_constraintStart_toEndOf="@+id/oven_switch"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:contentDescription="Minus"/>
+                        android:contentDescription="@string/minus_button"/>
 
                     <TextView
                         android:id="@+id/oven_temp"
@@ -119,7 +116,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="4dp"
-                        android:text="180°C"
+
                         android:textSize="20sp"
                         app:layout_constraintStart_toEndOf="@+id/oven_minus"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -131,7 +128,7 @@
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="4dp"
                         android:background="@drawable/ripple_effect"
-                        android:contentDescription="Plus"
+                        android:contentDescription="@string/plus_button"
                         android:src="@drawable/ic_plus"
                         app:layout_constraintStart_toEndOf="@+id/oven_temp"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -140,7 +137,7 @@
                         android:id="@+id/fuenteCalor"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Fuente Calor:"
+                        android:text="@string/fuenteDeCalor"
                         android:textStyle="bold"
                         android:textSize="18sp"
                         android:layout_marginTop="10dp"
@@ -163,7 +160,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="30dp"
                         android:layout_marginTop="20dp"
-                        android:text="Modo Grill:"
+                        android:text="@string/modoGrill"
                         android:textStyle="bold"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -181,7 +178,7 @@
                         android:id="@+id/modoConveccion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Modo Conveccion:"
+                        android:text="@string/modoConveccion"
                         android:textStyle="bold"
                         android:layout_marginTop="20dp"
                         android:layout_marginStart="30dp"
